// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms: Badge snapshot | variant: primary 1`] = `
.c1 {
  font-size: 12px;
  font-weight: 600;
  color: inherit;
  font-family: Titillium Web;
  text-transform: uppercase;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e10600;
  border-color: #e10600;
}

<span
  className="c0"
>
  <span
    className="c1"
    fontSize="xxs"
    fontWeight="semibold"
  >
    Hello world! I am using React
  </span>
</span>
`;

exports[`Atoms: Badge snapshot | variant: secondary 1`] = `
.c1 {
  font-size: 12px;
  font-weight: 600;
  color: inherit;
  font-family: Titillium Web;
  text-transform: uppercase;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1f1f27;
  padding: 4px 8px;
  border-radius: 24px;
  border: 2px solid #e10600;
}

<span
  className="c0"
>
  <span
    className="c1"
    fontSize="xxs"
    fontWeight="semibold"
  >
    Hello world! I am using React
  </span>
</span>
`;
